--- a/server/client/index.html
+++ b/server/client/index.html
@@ -16,7 +16,8 @@
 </div>
 <div id="userPost">
         <p>user_id: <input type="text"id='user_id'></p>
-        <button>Submit</button>
+        <button id="getUser">Submit</button>
+        <p id="userInfo"></p>
 </div>
 <div>
     <form id="addPostForm">
